--- a/easy/pickle_rick/rick/index.html
+++ b/easy/pickle_rick/rick/index.html
@@ -59,6 +59,8 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
     
 
     <h1 id="rick-writeup">RICK WRITEUP</h1>
+<p>[08/28/2024 - 08/29/2024]</p>
+<p>Time: 2 - 3 hours</p>
 <h2 id="optional-but-useful">Optional but useful:</h2>
 <p>When starting the machine, I got the IP and put it in hosts. To make it more efficient at getting to the site. IP: 10.10.108.239; host: rick.thm.</p>
 <h2 id="reconnaissance">Reconnaissance</h2>
